fix background overlapping

--- a/assets/scss/modules/_content.scss
+++ b/assets/scss/modules/_content.scss
@@ -24,11 +24,11 @@
         &:before {
             background: variables.$color-bg;
             content: "";
-            position: fixed;
+            position: absolute;
             top: 0;
             right: 0;
-            bottom: 0;
             left: 0;
+            height: 100vh;
             z-index: -2;
         }
     }
